# dataforge

./: README.md  pyproject.toml
.github/workflows/: poetry_pytest.yml  poetry_unittest.yml
dataforge/: __init__.py  dataforge.py  exceptions.py
tests/: test_dataforge.py  test_dataforge_pytest.py
