[tool.poetry]
name = "dataforge"
version = "0.1.0"
description = ""
authors = ["Nyz <nyz@bearswithsa.ws>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGE CONTROL"]
disable = "C0116,R0902"